--- a/PIDev_java/src/UI/OffreUI/AjouterRendezVousFXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/AjouterRendezVousFXML.fxml
@@ -2,86 +2,42 @@
 
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTimePicker?>
-<?import javafx.geometry.Insets?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.GridCell?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.AjouterRendezVousFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="374.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.AjouterRendezVousFXMLController">
    <children>
-      <VBox fx:id="calender" prefHeight="400.0" prefWidth="600.0">
+      <TextField fx:id="tfTitre" layoutX="187.0" layoutY="87.0" prefHeight="25.0" prefWidth="162.0" promptText="Titre" />
+      <Label layoutX="187.0" layoutY="70.0" text="Titre" />
+      <Label layoutX="187.0" layoutY="138.0" prefHeight="17.0" prefWidth="66.0" text="Description" />
+      <Label layoutX="187.0" layoutY="253.0" prefHeight="17.0" prefWidth="98.0" text="Date rendez_vous" />
+      <Button alignment="CENTER" layoutX="532.0" layoutY="328.0" mnemonicParsing="false" onMouseClicked="#newRendezvous" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #ad0505;" text="Ajouter" textFill="#f8f3f3" />
+      <Pane prefHeight="61.0" prefWidth="787.0" style="-fx-background-color: #ad0505;">
          <children>
-            <Pane prefHeight="73.0" prefWidth="600.0" style="-fx-background-color: #ad0505;">
-               <children>
-                  <Label layoutY="4.0" prefHeight="70.0" prefWidth="237.0" text="Ajouter Rendz Vous" textFill="WHITE">
-                     <font>
-                        <Font size="26.0" />
-                     </font>
-                  </Label>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </Pane>
-            <Pane prefHeight="46.0" prefWidth="600.0" />
-            <VBox prefHeight="269.0" prefWidth="600.0">
-               <children>
-                  <HBox prefHeight="46.0" prefWidth="600.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Titre" />
-                        <TextField fx:id="tfTitre" prefHeight="18.0" prefWidth="229.0">
-                           <HBox.margin>
-                              <Insets left="30.0" right="10.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="58.0" prefWidth="600.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-                        <TextArea fx:id="tfDescription" prefHeight="58.0" prefWidth="220.0" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="47.0" prefWidth="302.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start" />
-                        <JFXDatePicker fx:id="tfDate" defaultColor="#ad0505" />
-                        <JFXTimePicker fx:id="tfTimeStart" defaultColor="#ad0505" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="47.0" prefWidth="321.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="end" />
-                        <JFXTimePicker fx:id="tfTimeEnd" defaultColor="#ad0505" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="78.0" prefWidth="296.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Room" />
-                        <TextField fx:id="tfRoom" prefHeight="26.0" prefWidth="229.0">
-                           <HBox.margin>
-                              <Insets left="30.0" right="10.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <HBox alignment="CENTER" prefHeight="62.0" prefWidth="654.0">
-               <children>
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#newRendezvous" prefHeight="32.0" prefWidth="199.0" style="-fx-background-color: #ad0505;" text="Ajouter" textFill="WHITE" />
-               </children>
-            </HBox>
-         </children></VBox>
+            <Label layoutX="81.0" layoutY="6.0" prefHeight="50.0" prefWidth="224.0" text="Ajouter Rendz Vous" textFill="WHITE">
+               <font>
+                  <Font name="Arial Italic" size="24.0" />
+               </font>
+            </Label>
+            <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutX="6.0" layoutY="52.0" size="60" text="" wrappingWidth="55.57142639160156" />
+         </children>
+      </Pane>
+      <TextArea fx:id="tfDescription" layoutX="187.0" layoutY="170.0" prefHeight="68.0" prefWidth="162.0" promptText="Description" />
+      <Text layoutX="441.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End" wrappingWidth="24.785155721008778" />
+      <GridCell />
+      <Text layoutX="441.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start" />
+      <JFXTimePicker fx:id="tfTimeStart" defaultColor="#ad0505" layoutX="446.0" layoutY="87.0" promptText="Heur " />
+      <JFXTimePicker fx:id="tfTimeEnd" defaultColor="#ad0505" layoutX="451.0" layoutY="170.0" prefHeight="25.0" prefWidth="171.0" promptText="Heur" />
+      <JFXDatePicker fx:id="tfDate" defaultColor="#ad0505" layoutX="187.0" layoutY="303.0" prefHeight="25.0" prefWidth="149.0" promptText="Date" />
+      <Text layoutX="450.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room" />
+      <TextField fx:id="tfRoom" layoutX="446.0" layoutY="270.0" prefHeight="26.0" prefWidth="171.0" promptText="Room Number" />
    </children>
 </AnchorPane>
