--- a/PIDev_java/src/UI/OffreUI/DetailOffre.fxml
+++ b/PIDev_java/src/UI/OffreUI/DetailOffre.fxml
@@ -4,22 +4,25 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="824.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.DetailOffreController">
+<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="846.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.DetailOffreController">
    <children>
-      <VBox layoutX="10.0" layoutY="10.0" prefHeight="456.0" prefWidth="192.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutY="-4.0" prefHeight="481.0" prefWidth="192.0" style="-fx-background-color: #ad0505;">
          <children>
             <Pane prefHeight="94.0" prefWidth="181.0">
                <children>
-                  <Label layoutX="75.0" layoutY="10.0" prefHeight="60.0" prefWidth="111.0" text="Recrutini" textFill="WHITE">
+                  <Label layoutX="75.0" prefHeight="70.0" prefWidth="140.0" text="Recrutini" textFill="WHITE">
                      <font>
                         <Font size="26.0" />
                      </font>
@@ -43,7 +46,7 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="14.0" text="" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Offre D'emploi" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#offre" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Offre D'emploi" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="BRIEFCASE" size="14.0" />
                </graphic>
@@ -57,7 +60,7 @@
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Formation" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="RendezVous" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
                </graphic>
@@ -79,7 +82,7 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="GLOBE" size="14.0" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="174.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Berlin Sans FB" size="13.0" />
                </font>
@@ -103,125 +106,116 @@
             </Button>
          </children>
       </VBox>
-      <Pane layoutX="188.0" layoutY="54.0" opacity="0.89" prefHeight="70.0" prefWidth="649.0" style="-fx-background-color: #ad0505;">
+      <HBox layoutX="10.0" layoutY="10.0" prefHeight="47.0" prefWidth="321.0" />
+      <Pane layoutX="200.0" layoutY="28.0" prefHeight="431.0" prefWidth="633.0" style="-fx-background-color: #fcf2f2; -fx-background-radius: 40px;">
+         <effect>
+            <DropShadow color="#a31515ab" />
+         </effect>
          <children>
-            <HBox layoutX="6.0" layoutY="22.0" prefHeight="41.0" prefWidth="513.0">
-               <children>
-                  <TextField alignment="BASELINE_LEFT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="30.0" prefWidth="200.0" promptText="Recherche" HBox.hgrow="NEVER">
-                     <HBox.margin>
-                        <Insets left="15.0" />
-                     </HBox.margin>
-                     <padding>
-                        <Insets left="30.0" />
-                     </padding>
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </TextField>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="53.0" style="-fx-background-color: #ad0505;">
-                     <graphic>
-                        <FontAwesomeIconView fill="#fffefe" glyphName="SEARCH" wrappingWidth="24.6328125" />
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
+            <Label fx:id="lb_Post" alignment="CENTER" layoutX="255.0" layoutY="39.0" prefHeight="28.0" prefWidth="355.0" text="Text" textFill="#830707">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+               <effect>
+                  <ColorAdjust />
+               </effect>
+            </Label>
+            <Text fx:id="lb_domaine" layoutX="320.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="206.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Circle fx:id="img" fill="DODGERBLUE" layoutX="102.0" layoutY="142.0" radius="75.0" stroke="BLACK" strokeType="INSIDE">
+               <effect>
+                  <Blend />
+               </effect>
+            </Circle>
+            <Button alignment="CENTER" layoutX="13.0" layoutY="236.0" mnemonicParsing="false" onMouseClicked="#updateOffre" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Modifir" textFill="#f8f5f5">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic>
+            </Button>
+            <Button alignment="CENTER" layoutX="114.0" layoutY="236.0" mnemonicParsing="false" onMouseClicked="#deleteOffre" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Supprimer" textFill="WHITE">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" size="14.0" />
+               </graphic>
+            </Button>
+            <Label layoutX="242.0" layoutY="75.0" prefHeight="20.0" prefWidth="67.0" text="Domaine :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ad0505" height="424.0" layoutX="215.0" stroke="BLACK" strokeType="INSIDE" width="3.0" />
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#backToListe" prefHeight="19.0" prefWidth="148.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Retourner à la liste" textFill="WHITE" />
+            <Label layoutX="244.0" layoutY="126.0" prefHeight="17.0" prefWidth="62.0" text="Objectif :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Text fx:id="lb_objectif" layoutX="320.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="276.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Label fx:id="lb_depo" layoutX="242.0" layoutY="164.0" prefHeight="28.0" prefWidth="162.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <FontAwesomeIconView fill="#ad0505" glyphName="CALENDAR" layoutX="404.0" layoutY="182.0" size="14.0" />
+            <Label fx:id="lb_expiration" layoutX="440.0" layoutY="162.0" prefHeight="30.0" prefWidth="140.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <FontAwesomeIconView fill="#ad0505" glyphName="CALENDAR" layoutX="588.0" layoutY="178.0" size="14.0" />
+            <Text layoutX="243.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Experience:" wrappingWidth="130.048828125">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="280.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Minimale">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="429.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maximale">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="lb_salaire" layoutX="343.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="128.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Label fx:id="leb_min" layoutX="357.0" layoutY="236.0" prefHeight="30.0" prefWidth="57.0" text="Label" />
+            <Label fx:id="lb_max" layoutX="510.0" layoutY="238.0" prefHeight="26.0" prefWidth="56.0" text="Label" />
+            <Label layoutX="243.0" layoutY="321.0" prefHeight="22.0" prefWidth="94.0" text="Competences :">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Text fx:id="lb_competence" layoutX="340.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="191.99999392032623">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="246.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="lb_description" layoutX="248.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="306.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="245.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salaire :" wrappingWidth="89.00000059604645">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
-      <VBox layoutX="192.0" layoutY="124.0" prefHeight="358.0" prefWidth="338.0">
-         <children>
-            <HBox prefHeight="28.0" prefWidth="360.0">
-               <children>
-                  <Label text="Post : " />
-                  <Text fx:id="lb_Post" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="319.13671875" />
-               </children>
-            </HBox>
-            <HBox prefHeight="30.0" prefWidth="360.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="58.0" text="Domaine :" />
-                  <Text fx:id="lb_domaine" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="300.13671875" />
-               </children>
-            </HBox>
-            <HBox prefHeight="47.0" prefWidth="415.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="62.0" text="objectif :" />
-                  <Text fx:id="lb_objectif" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="297.13671875" />
-               </children>
-            </HBox>
-            <HBox prefHeight="97.0" prefWidth="368.0">
-               <children>
-                  <VBox prefHeight="65.0" prefWidth="356.0">
-                     <children>
-                        <HBox prefHeight="41.0" prefWidth="356.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Depot :" wrappingWidth="75.990234375" />
-                              <Label fx:id="lb_depo" prefHeight="40.0" prefWidth="209.0" text="Label" />
-                           </children>
-                        </HBox>
-                        <HBox prefHeight="44.0" prefWidth="356.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date expiration :" wrappingWidth="95.853515625" />
-                              <Label fx:id="lb_expiration" prefHeight="30.0" prefWidth="209.0" text="Label" />
-                           </children>
-                        </HBox>
-                        <HBox prefHeight="45.0" prefWidth="356.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Experience Minimale :" wrappingWidth="125.048828125" />
-                              <Label fx:id="leb_min" prefHeight="30.0" prefWidth="209.0" text="Label" />
-                           </children>
-                        </HBox>
-                        <HBox prefHeight="35.0" prefWidth="356.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Experience Maximale :" wrappingWidth="122.076171875" />
-                              <Label fx:id="lb_max" prefHeight="26.0" prefWidth="214.0" text="Label" />
-                           </children>
-                        </HBox>
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-            <HBox prefHeight="59.0" prefWidth="368.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-                  <Text fx:id="lb_description" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="306.13671875" />
-               </children>
-            </HBox>
-            <HBox prefHeight="20.0" prefWidth="368.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="85.0" text="salaire :" />
-                  <Text fx:id="lb_salaire" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="128.13671875" />
-               </children>
-            </HBox>
-            <HBox prefHeight="51.0" prefWidth="368.0">
-               <children>
-                  <Label prefHeight="22.0" prefWidth="94.0" text="Competences :" />
-                  <Text fx:id="lb_competence" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-      <VBox layoutX="535.0" layoutY="124.0" prefHeight="351.0" prefWidth="302.0">
-         <children>
-            <HBox alignment="CENTER" prefHeight="150.0" prefWidth="250.0">
-               <children>
-                  <ImageView fx:id="logo" fitHeight="150.0" fitWidth="211.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </HBox>
-            <HBox prefHeight="47.0" prefWidth="321.0">
-               <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" onMouseClicked="#updateOffre" prefHeight="25.0" prefWidth="128.0" style="-fx-background-color: #ad0505;" text="Modifir" textFill="#f8f5f5">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button alignment="CENTER" mnemonicParsing="false" onMouseClicked="#deleteOffre" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: #ad0505;" text="Supprimer" textFill="WHITE" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="47.0" prefWidth="321.0">
-               <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#backToListe" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: #ad0505;" text="Retourner à la liste" textFill="WHITE" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
    </children>
 </AnchorPane>
