--- a/PIDev_java/src/UI/OffreUI/FXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/FXML.fxml
@@ -1,55 +1,215 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXDatePicker?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import org.controlsfx.control.GridCell?>
 
-<AnchorPane id="AnchorPane" prefHeight="430.0" prefWidth="744.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="846.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="tfPost" layoutX="187.0" layoutY="87.0" prefHeight="25.0" prefWidth="162.0" promptText="Titre" />
-      <Label layoutX="187.0" layoutY="70.0" text="Titre" />
-      <Label layoutX="185.0" layoutY="127.0" prefHeight="17.0" prefWidth="49.0" text="Objectif" />
-      <TextField fx:id="tfObjectif" layoutX="187.0" layoutY="146.0" prefHeight="25.0" prefWidth="162.0" promptText="Objectif" />
-      <Label layoutX="186.0" layoutY="186.0" text="Competence" />
-      <TextField fx:id="tfCompetence" layoutX="184.0" layoutY="206.0" prefHeight="25.0" prefWidth="162.0" promptText="Competence" />
-      <Label layoutX="187.0" layoutY="245.0" prefHeight="17.0" prefWidth="88.0" text="Domaine" />
-      <Label layoutX="187.0" layoutY="306.0" prefHeight="17.0" prefWidth="66.0" text="Description" />
-      <Label layoutX="453.0" layoutY="184.0" prefHeight="17.0" prefWidth="88.0" text="Date Expiration" />
-      <Button alignment="CENTER" layoutX="476.0" layoutY="393.0" mnemonicParsing="false" onAction="#inscrireUser" onMouseClicked="#newOffre" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #ad0505;" text="Ajouter" textFill="#f8f3f3" />
-      <Text layoutX="450.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type Contrat" />
-      <Text layoutX="450.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salaire" />
-      <ComboBox fx:id="cbContrat" layoutX="452.0" layoutY="87.0" onMouseClicked="#tfGover" prefHeight="25.0" prefWidth="162.0" promptText="Choisir Le Type De Contrat" />
-      <Pane prefHeight="61.0" prefWidth="787.0" style="-fx-background-color: #ad0505;">
+      <VBox layoutY="-4.0" prefHeight="481.0" prefWidth="192.0" style="-fx-background-color: #ad0505;">
          <children>
-            <Label layoutX="81.0" layoutY="6.0" prefHeight="50.0" prefWidth="224.0" text="Ajouter Rendz Vous" textFill="WHITE">
+            <Pane prefHeight="94.0" prefWidth="181.0">
+               <children>
+                  <Label layoutX="75.0" prefHeight="70.0" prefWidth="140.0" text="Recrutini" textFill="WHITE">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="75.0" layoutY="47.0" prefHeight="19.0" prefWidth="89.0" text="Agence D'emploi" textFill="WHITE">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutY="56.0" size="60" text="" wrappingWidth="55.57142639160156" />
+               </children>
+            </Pane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Home" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
-                  <Font name="Arial Italic" size="24.0" />
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="14.0" text="" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#offre" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Offre D'emploi" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="BRIEFCASE" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="RendezVous" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="47.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Annonce" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GLOBE" size="14.0" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="TASKS" size="14.0" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="41.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Inscreption" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="USER" size="14.0" />
+               </graphic>
+            </Button>
+         </children>
+      </VBox>
+      <HBox layoutX="10.0" layoutY="10.0" prefHeight="47.0" prefWidth="321.0" />
+      <Pane layoutX="200.0" layoutY="28.0" prefHeight="431.0" prefWidth="633.0" style="-fx-background-color: #fcf2f2; -fx-background-radius: 40px;">
+         <effect>
+            <DropShadow color="#a31515ab" />
+         </effect>
+         <children>
+            <Label fx:id="lb_Post" alignment="CENTER" layoutX="255.0" layoutY="39.0" prefHeight="28.0" prefWidth="185.0" text="Text" textFill="#830707">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+               <effect>
+                  <ColorAdjust />
+               </effect>
+            </Label>
+            <Text fx:id="lb_domaine" layoutX="320.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="206.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Circle fx:id="img" fill="DODGERBLUE" layoutX="102.0" layoutY="142.0" radius="75.0" stroke="BLACK" strokeType="INSIDE">
+               <effect>
+                  <Shadow color="#ad0505" />
+               </effect></Circle>
+            <Button alignment="CENTER" layoutX="13.0" layoutY="236.0" mnemonicParsing="false" onMouseClicked="#updateOffre" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Modifir" textFill="#f8f5f5">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic></Button>
+            <Button alignment="CENTER" layoutX="114.0" layoutY="236.0" mnemonicParsing="false" onMouseClicked="#deleteOffre" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Supprimer" textFill="WHITE">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" size="14.0" />
+               </graphic></Button>
+            <Label layoutX="242.0" layoutY="75.0" prefHeight="20.0" prefWidth="67.0" text="Domaine :">
+               <font>
+                  <Font size="14.0" />
                </font>
             </Label>
-            <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutX="6.0" layoutY="52.0" size="60" text="" wrappingWidth="55.57142639160156" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ad0505" height="424.0" layoutX="215.0" stroke="BLACK" strokeType="INSIDE" width="3.0" />
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#backToListe" prefHeight="19.0" prefWidth="148.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Retourner à la liste" textFill="WHITE" />
+            <Label layoutX="244.0" layoutY="126.0" prefHeight="17.0" prefWidth="62.0" text="Objectif :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Text fx:id="lb_objectif" layoutX="320.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="276.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Label fx:id="lb_depo" layoutX="242.0" layoutY="157.0" prefHeight="28.0" prefWidth="162.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <FontAwesomeIconView fill="#ad0505" glyphName="CALENDAR" layoutX="404.0" layoutY="175.0" size="14.0" />
+            <Label fx:id="lb_expiration" layoutX="440.0" layoutY="155.0" prefHeight="30.0" prefWidth="140.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <FontAwesomeIconView fill="#ad0505" glyphName="CALENDAR" layoutX="581.0" layoutY="173.0" size="14.0" />
+            <Text layoutX="243.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Experience:" wrappingWidth="130.048828125">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="280.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Minimale">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="429.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maximale">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Label layoutX="245.0" layoutY="283.0" prefHeight="17.0" prefWidth="85.0" text="salaire :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Text fx:id="lb_salaire" layoutX="343.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="128.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Label fx:id="leb_min" layoutX="357.0" layoutY="236.0" prefHeight="30.0" prefWidth="57.0" text="Label" />
+            <Label fx:id="lb_max" layoutX="510.0" layoutY="238.0" prefHeight="26.0" prefWidth="56.0" text="Label" />
+            <Label layoutX="244.0" layoutY="321.0" prefHeight="22.0" prefWidth="94.0" text="Competences :" />
+            <Text fx:id="lb_competence" layoutX="340.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="191.99999392032623">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="246.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="lb_description" layoutX="248.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="306.13671875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
-      <ComboBox fx:id="cbDomaine" layoutX="187.0" layoutY="274.0" onMouseClicked="#tfGover" prefHeight="25.0" prefWidth="162.0" promptText="Choisir Votre Domaine" />
-      <TextArea fx:id="tfDescription" layoutX="187.0" layoutY="337.0" prefHeight="68.0" prefWidth="162.0" promptText="Description" />
-      <Spinner fx:id="tfSalaire" layoutX="452.0" layoutY="146.0" />
-      <JFXDatePicker fx:id="datePickerExpiration" defaultColor="#ad0505" layoutX="455.0" layoutY="204.0" prefHeight="25.0" prefWidth="149.0" />
-      <Text layoutX="456.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre Place" />
-      <Spinner fx:id="tfPlace" layoutX="457.0" layoutY="274.0" prefHeight="25.0" prefWidth="149.0" />
-      <Text layoutX="453.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Experience " />
-      <Spinner fx:id="tfMinVal" layoutX="489.0" layoutY="345.0" prefHeight="26.0" prefWidth="49.0" />
-      <Spinner fx:id="tfMaxVal" layoutX="577.0" layoutY="345.0" prefHeight="26.0" prefWidth="49.0" />
-      <Text layoutX="455.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Min" wrappingWidth="23.000009909272194" />
-      <Text layoutX="550.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Max" wrappingWidth="23.000009909272194" />
-      <GridCell />
    </children>
 </AnchorPane>
